# pyPro

./: README.md  company.pkl  company3.pkl  train.pkl  try_only.txt
Arduino/: ser.py
CameraFromTerminal/: beagle_M_camera.txt  camera_useful_commands.txt  gstreamer_pipeline_examples.md
GPIO/: buttonLED.py  pwm.py
Github/: david's history  david's history.txt  git_flow.txt  tutorial.md  usefull commands.txt
Hangar/: matt_history_hangar_jetson_preparation.txt
Linux/: useful_commands.txt
MAVSDK/: MAVSDK_cpp_lib
NVIDIA/: deepLearning-1.py  deepLearning-10-trainOnPixhawk.py  deepLearning-12.py  deepLearning-13-openCV-Gst-bothCams-udp-60fps-fast.py  deepLearning-13-openCV-Gst-piCam-udp-60fps-fast.py  deepLearning-13-openCV-Gst-webCam-udp-60fps-fast.py  deepLearning-13-openCV-Gstream-myCode-threads.py  deepLearning-13-threads.py  deepLearning-13.py  deepLearning-14-openCV-Gstream-online.py  deepLearning-14-web-stream.py  deepLearning-15-terminal.py  deepLearning-2.py  deepLearning-3.py  deepLearning-4.py  deepLearning-5.py  deepLearning-6.py  deepLearning-7-objectDetect.py  deepLearning-8-objDetct-object-ID.py  deepLearning-9-objdetect.py  myIdentify-1st.py  usefulCommands  usefulWebsites
ROS/: mavros  useful_commands.txt
cascade/: sourceCode.txt
cmake_tutorials/: CMakeLists.txt  CMakeLists_find_library.txt  CMakeLists_find_package.txt  CMakeLists_lib.txt  CMakeLists_lib2.txt  steps.txt
docker/: useful_commands.txt
faceRecognizer/: faceRecognize-2.py  faceRecognizer-1.py  faceRecognizer-10-thread.py  faceRecognizer-11-multiCam-Threading.py  faceRecognizer-12-multiFace-Threaded.py  faceRecognizer-12-multiFace-Threaded2.py  faceRecognizer-2.py  faceRecognizer-3.py  faceRecognizer-4.py  faceRecognizer-5-liveVideo.py  faceRecognizer-6-liveFPS.py  faceRecognizer-8-pyth.py  faceRecognizer-9-classes.py  readRecognize.py  trainSave.py
matPlotLib/: matBasic1.py
openCV/: openCV1.py  openCV11-ROI-mouseClick.py  openCV12-bitwise.py  openCV13-threshold-masks.py  openCV15-colorChannel.py  openCV16-HSV.py  openCV17-contour-colorTracking.py  openCV2-moveWindow.py  openCV21-faceDetect.py  openCV3-resizeWindows.py  (+6 more)
(+20 files in other folders)
